<resources>
    <string name="app_name">carepick</string>
    <string name="doctor_list">의사 목록</string>
    <string name="search_placeholder">병원이나 의사를 검색하세요</string>
    <string name="service_list">서비스 목록</string>
    <string name="hospital_list">병원 목록</string>
    <string name="self_check">자가진단</string>
    <string name="banner">배너</string>
    <string name="pinned_hospital_list">즐겨찾는 병원</string>
    <string name="self_check_text">현재 발생한 증상을 자유롭게 입력하세요</string>
    <string name="doctor_detail_image">의사 사진</string>

    <string name="doctor_detail_license">자격면허</string>
    <string name="doctor_detail_career">경력</string>

    <string name="doctor_name_example">남호석 전문의</string>
    <string name="hospital_name_example">베이드의원</string>
    <string name="hospital_address_example">병원 주소</string>
    <string name="doctor_detail_career_example">의사의 경력이 들어갈 자리</string>

    <string name="sort_filter">정렬 필터</string>
    <string name="sort_distance">거리순</string>
    <string name="sort_experience">근속연수순</string>
    <string name="sort_education">학력순</string>
    <string name="apply_filter">필터 적용</string>

    <string name="close">닫기</string>

    <string name="distance_range">거리 범위</string>
    <string name="operating_time">운영 시간</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="time_range">시간 범위</string>
    <string name="choose_day">요일 선택</string>

    <string name="home_set_location_hint">위치 정보 없음</string>
    <string name="no_results_in_range">범위 내 결과 없음</string>
    <string name="fetch_error_message">조회 실패</string>
    <string name="need_location_message">위치 정보 없음</string>
</resources>