<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/doctorDetailMainInfo"
        android:layout_width="409dp"
        android:layout_height="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/doctorDetailMainInfoContent"
            android:layout_width="322dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/doctorDetailImage"
                android:layout_width="98dp"
                android:layout_height="98dp"
                android:contentDescription="@string/doctor_detail_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/doctorDetailName"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/doctor_name_example"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/doctorDetailImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/doctorDetailHospitalName"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/hospital_name_example"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/doctorDetailImage"
                app:layout_constraintTop_toBottomOf="@+id/doctorDetailName" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/doctorDetailSpecialties"
                android:layout_width="212dp"
                android:layout_height="96dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@+id/doctorDetailImage"
                app:layout_constraintTop_toBottomOf="@+id/doctorDetailHospitalName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/doctorDetailLicenseContainer"
        android:layout_width="409dp"
        android:layout_height="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorDetailMainInfo">

        <TextView
            android:id="@+id/doctorDetailLicenseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/doctor_detail_license"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/doctorDetailLicenseList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@id/doctorDetailLicenseContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorDetailLicenseText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/doctorDetailCareerContainer"
        android:layout_width="409dp"
        android:layout_height="108dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorDetailLicenseContainer">

        <TextView
            android:id="@+id/doctorDetailCareerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/doctor_detail_career"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/doctorDetailCareerList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/doctor_detail_career_example"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorDetailCareerText" />

        <!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/doctorDetailCareerList"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_marginBottom="16dp"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/doctorDetailCareerContainer"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/doctorDetailCareerText" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>